# csc299-project

./: .env.example  .gitignore  CHECKLIST.md  ChatGPT.MD  Gemini.MD  PROJECT_PLAN.md  READMe.md  RECORDING_GUIDE.md  ROADMAP.md  SUMMARY.md  VIDEO.txt  VIDEO_SCRIPT.md  requirements.txt  run_demo.sh  video.txt
knowledgeflow/: README_v2.md  STATUS.md  __init__.py  cli_v2.py  demo_v2.py  pyproject.toml
knowledgeflow/agents/: summarizer.py
knowledgeflow/core/: __init__.py  categories.py  database.py  json_storage.py  links.py  models.py
knowledgeflow/tests/: conftest.py  test_json_storage.py
prototype_1/: README.md  demo.py  main.py  test_basic.py
specs/: 01-data-model.md  02-cli-interface.md  03-ai-setup.md  04-ai-agents.md
tasks1/: PLAN.md  README.md  task_cli.py
tasks2/: QUICKSTART.md  README.md  experiment_openai.py  experiment_parsers.py  experiment_rich_ui.py  pkms.py
tasks3/: README.md  manual_test.py  pyproject.toml
tasks3/src/tasks3/: __init__.py  pkms.py
tasks3/tests/: test_pkms.py
tasks4/: README.md  main.py
tasks5/: README.md
tasks5/.specify/memory/: constitution.md  spec.md
tasks5/src/tasks_manager/: __init__.py  cli.py  storage.py
tasks5/tests/: test_storage.py
tests/: test_basic.py  test_enhanced_model.py
