[project]
name = "tasks3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kas7if", email = "kashif6524780@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
tasks3 = "tasks3:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
